--- a/A01_hm_tmpl.yaml
+++ b/A01_hm_tmpl.yaml
@@ -131,13 +131,28 @@ problem: !Coupling_Sequential
             bc_type: displacement
             bc_displacement: 0
 
+          # bc_type stress prepocita tenzor napeti na normalovou silu, s normalou orientovanou dovnitr
+          # bc_stress * vnitřní normála = bc_traction = síla působící na těleso
+          # bc_stress je napětí v tělese, ne v okolí. Aby se z toho dostala síla působící na těleso (ne na okolí), musí se otočit znaménko
           - region: .tunnel
             time: 0
-            bc_type: traction
-            bc_traction: !FieldFormula
-              value: [-45e6*(1/(17*86400)*t)*x / sqrt(x*x + (<tunnel_dimX>/<tunnel_dimY>)^4*y*y), -11e6*(1/(17*86400)*t)*y / sqrt((<tunnel_dimY>/<tunnel_dimX>)^4*x*x + y*y), 0] # 1d=86400s
+            bc_type: stress
+            bc_stress: !FieldFormula
+              value: [ 45e6*(1/(17*86400)*t), 11e6*(1/(17*86400)*t), 0] # 1d=86400s
           - region: .tunnel
             time: 17
-            bc_type: traction
-            bc_traction: !FieldFormula
-              value: [ -45e6*x / sqrt(x*x + (<tunnel_dimX>/<tunnel_dimY>)^4*y*y), -11e6*y / sqrt((<tunnel_dimY>/<tunnel_dimX>)^4*x*x + y*y), 0 ] # 1d=86400s
+            bc_type: stress
+            bc_stress: !FieldFormula
+              value: [ 45e6, 11e6, 0] # 1d=86400s
+
+          ### "tahova" sila na hranici vrtu (proto zaporne znamenko)
+#          - region: .tunnel
+#            time: 0
+#            bc_type: traction
+#            bc_traction: !FieldFormula
+#              value: [-45e6*(1/(17*86400)*t)*x / sqrt(x*x + (<tunnel_dimX>/<tunnel_dimY>)^4*y*y), -11e6*(1/(17*86400)*t)*y / sqrt((<tunnel_dimY>/<tunnel_dimX>)^4*x*x + y*y), 0] # 1d=86400s
+#          - region: .tunnel
+#            time: 17
+#            bc_type: traction
+#            bc_traction: !FieldFormula
+#              value: [ -45e6*x / sqrt(x*x + (<tunnel_dimX>/<tunnel_dimY>)^4*y*y), -11e6*y / sqrt((<tunnel_dimY>/<tunnel_dimX>)^4*x*x + y*y), 0 ] # 1d=86400s
