--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "bgem"]
 	path = bgem
 	url = git@github.com:GeoMop/bgem.git
+[submodule "MCMC-Bayes-python"]
+	path = MCMC-Bayes-python
+	url = git@github.com:dom0015/MCMC-Bayes-python.git
