--- a/B02long_hm_tmpl.yaml
+++ b/B02long_hm_tmpl.yaml
@@ -53,7 +53,7 @@ problem: !Coupling_Sequential
             time: <start_time>
             bc_type: dirichlet
             bc_pressure: !FieldFormula
-              value: 300*(-1/((<bored_time>-1)*86400)*(t-<start_time>) + 1) # 1d=86400s
+              value: 300*(-1/((<bored_time>)*86400)*(t-<start_time>) + 1) # 1d=86400s
           - region: .tunnel
             time: <bored_time>
             bc_type: dirichlet
@@ -120,7 +120,7 @@ problem: !Coupling_Sequential
             time: <start_time>
             bc_type: stress
             bc_stress: !FieldFormula
-              value: [ 45e6*(-1/((<bored_time>-1)*86400)*(t-<start_time>)+1), 11e6*(-1/((<bored_time>-1)*86400)*(t-<start_time>)+1), 0] # 1d=86400s
+              value: [ 45e6*(-1/((<bored_time>)*86400)*(t-<start_time>)+1), 11e6*(-1/((<bored_time>)*86400)*(t-<start_time>)+1), 0] # 1d=86400s
           - region: .tunnel
             time: <bored_time>
             bc_type: stress
