--- a/A02_hm_tmpl.yaml
+++ b/A02_hm_tmpl.yaml
@@ -29,7 +29,7 @@ problem: !Coupling_Sequential
           - region: BULK
             conductivity: <bulk_conductivity>
             # https://en.wikipedia.org/wiki/Specific_storage
-            storativity: 3.28e-7 # S = rho * g * (beta_s + nu * beta_w)
+            storativity: 2.8e-8 #3.28e-7 # S = rho * g * (beta_s + nu * beta_w)
             # bulk compressibility beta_s=1/K = (3(1-2pr)/E)
             # porosity nu=0.007
             # water compressibility beta_w=0 1/Pa
@@ -89,7 +89,7 @@ problem: !Coupling_Sequential
         solver: !Petsc
           a_tol: <mechanics_solver__a_tol>
           r_tol: <mechanics_solver__r_tol>
-#          options: <mechanics_solver__options>
+          options: <mechanics_solver__options>
         input_fields:
           - region: BULK
             young_modulus: 60e9
@@ -109,5 +109,15 @@ problem: !Coupling_Sequential
           - region: .tunnel
             time: <bored_time>
             bc_type: stress
-            bc_stress: !FieldFormula
-              value: [ -45e6, -11e6, 0] # 1d=86400s
+            bc_stress: [ -45e6, -11e6, 0] # 1d=86400s
+
+#          - region: .tunnel
+#            time: 0
+#            bc_type: traction
+#            bc_traction: !FieldFormula
+#              value: [ -45e6*(1/(<bored_time>*86400)*t)*x / sqrt(x*x + (4.375/3.5)^4*y*y), -11e6*(1/(<bored_time>*86400)*t)*y / sqrt((3.5/4.375)^4*x*x + y*y), 0 ] # 1d=86400s
+#          - region: .tunnel
+#            time: <bored_time>
+#            bc_type: traction
+#            bc_traction: !FieldFormula
+#              value: [ -45e6*x / sqrt(x*x + (4.375/3.5)^4*y*y), -11e6*y / sqrt((3.5/4.375)^4*x*x + y*y), 0 ] # 1d=86400s
