--- a/config.yaml
+++ b/config.yaml
@@ -63,10 +63,11 @@ local:
 
 
 start_time: &start_time 0
-end_time: &end_time 140
+end_time: &end_time 365
 output_times: &output_times
-  - {begin: *start_time, step: 10, end: 17}
-  - {begin: 17, step: 10, end: *end_time}
+  - {begin: *start_time, step: 10, end: 18}
+  - {begin: 18, step: 10, end: 100}
+  - {begin: 100, step: 20, end: *end_time}
 
 geometry:
   # depth of the center of the box and of the coordinate system
