--- a/A02_flow_tmpl.yaml
+++ b/A02_flow_tmpl.yaml
@@ -37,15 +37,26 @@ problem: !Coupling_Sequential
 #            bc_pressure: !FieldFormula
 #              value: 300
 
-      - region: .tunnel
-        time: 0
-        bc_type: dirichlet
-        bc_pressure: !FieldFormula
-          value: 300*(-1/(17*86400)*t + 1) # 1d=86400s
-      - region: .tunnel
-        time: 17
-        bc_type: dirichlet
-        bc_pressure: 0
+#      - region: .tunnel
+#        time: 0
+#        bc_type: dirichlet
+#        bc_pressure: !FieldFormula
+#          value: 300*(-1/(17*86400)*t + 1) # 1d=86400s
+#      - region: .tunnel
+#        time: 17
+#        bc_type: dirichlet
+#        bc_pressure: 0
+
+          - region: .tunnel
+            time: 0
+            bc_type: traction
+            bc_traction: !FieldFormula
+              value: [ -45e6*(1/(<bored_time>*86400)*t)*x / sqrt(x*x + (4.375/3.5)^4*y*y), -11e6*(1/(<bored_time>*86400)*t)*y / sqrt((3.5/4.375)^4*x*x + y*y), 0 ] # 1d=86400s
+          - region: .tunnel
+            time: <bored_time>
+            bc_type: traction
+            bc_traction: !FieldFormula
+              value: [ -45e6*x / sqrt(x*x + (4.375/3.5)^4*y*y), -11e6*y / sqrt((3.5/4.375)^4*x*x + y*y), 0 ] # 1d=86400s
 
       ### Trying prescribe b.c. using CSV (time evolving b.c.)
 #          - region: .tunnel
