--- a/config.yaml
+++ b/config.yaml
@@ -106,6 +106,12 @@ mcmc_parameters:
 #  - poisson_ratio
 #  - init_stress_x
 
+mcmc_observe_point:
+#  - HGT1-5
+  - HGT1-4
+#  - HGT2-4
+  - HGT2-3
+
 # parameters substituted into the HM model template
 hm_params:
     mesh: tunnel_mesh.msh # healed mesh is used at the end (programmatically replaced)
