--- a/config_mcmc_bayes.json
+++ b/config_mcmc_bayes.json
@@ -1,102 +1,161 @@
 {
     "debug": false,
-    "no_parameters": 2,
-    "_comment": "solver_module_path will be set automatically from process.py",
-    "no_observations": 64,
+    "no_parameters": 4,
+    "_comment": "no_observations will be set automatically",
+    "no_observations": 104,
     "transformations": [
         [
             "normal_to_lognormal",
             {
-                "mu": -35,
-                "sigma": 3
+                "mu": -32.747,
+                "sigma": 1.0
             }
         ],
         [
             "normal_to_lognormal",
             {
-                "mu": -17.4,
-                "sigma": 2
+                "mu": -17.391,
+                "sigma": 1.0
+            }
+        ],
+        [
+            "normal_to_lognormal",
+            {
+                "mu": 26.0,
+                "sigma": 1.2
+            }
+        ],
+        [
+            "normal_to_lognormal",
+            {
+                "mu": 18.6,
+                "sigma": 1.2
             }
         ]
     ],
+    "initial_sample_type": "prior",
     "problem_parameters": {
         "_comment_prior": "if prior_mean and prior_std is not specified, default internal distribution is N(0,1)",
         "prior_mean": [
-            0,
-            0
+            0.0,
+            0.0,
+            0.0,
+            0.0
         ],
         "prior_std": [
-            1,
-            1
+            1.0,
+            1.0,
+            1.0,
+            1.0
         ],
         "_comment1": "observations will be set by measured_data.py automatically",
         "observations": [
-            106.07775083457133,
-            647.5059928392344,
-            765.5063872617513,
-            785.9363931327391,
-            748.3550543832835,
-            703.4567572107733,
-            643.7049325054005,
-            611.1900512304194,
-            592.5808192428873,
-            561.2502712781712,
-            527.3715452902402,
-            509.21350332429677,
-            517.7953132052013,
-            513.0324218254965,
-            492.0973770988961,
+            286.75249430532506,
+            647.505992837846,
+            772.4661385282469,
+            783.6246889580977,
+            742.7672713999344,
+            700.0398407461971,
+            637.3826917709317,
+            608.9679710142716,
+            591.296507994133,
+            556.9603403850701,
+            525.1388236171608,
+            520.1124655870594,
+            520.8731565523746,
             485.57034676820814,
-            418.8358006239784,
-            446.8545403929782,
-            526.6506928641855,
-            571.9157058069421,
-            589.4629893880868,
-            597.1265699897979,
-            600.2299711530464,
-            604.5581921411632,
-            604.7600668142031,
-            604.3030677211254,
-            599.781937658204,
-            597.4747113601971,
-            599.5237522649612,
-            603.5162075985,
-            602.2570078823888,
-            600.6250273964256,
-            582.2586367492265,
-            56.84448702760535,
-            47.157646765770906,
-            42.80223297589835,
-            42.74533613439,
-            45.60841906896111,
-            50.8290096375545,
-            56.832308633239016,
-            61.373263412276785,
-            59.7197059469672,
-            59.843263888225934,
-            65.2862697054716,
-            77.28200598529702,
-            82.59519242462804,
-            81.3198908341026,
-            81.70885515375782,
-            161.64850011753842,
-            187.1707642868997,
-            182.76526641348053,
-            191.50618503655795,
-            200.7886287898105,
-            207.5598510729917,
-            212.97205051103523,
-            219.9265975657882,
-            224.58894066972934,
-            227.92156777635643,
-            230.46602601245695,
-            234.91244244005944,
-            239.5132460898639,
-            248.2467684454974,
-            254.3750665980536,
-            256.07655746197423
+            472.1092006040116,
+            448.5445128282981,
+            425.33668246812437,
+            373.48015289184804,
+            349.4477870584667,
+            325.8497343667235,
+            307.90382553609146,
+            301.22231190182674,
+            304.08469318741027,
+            283.7482877067673,
+            294.6750979559723,
+            299.28896213525434,
+            315.51781659523283,
+            446.8545403913626,
+            532.3926678804722,
+            574.2244347230497,
+            590.6051314322069,
+            597.7642637603241,
+            600.5070807685729,
+            604.591092468254,
+            604.952871127951,
+            604.0922733680742,
+            599.348453255019,
+            598.7769972775626,
+            600.5320069154652,
+            600.6250273964257,
+            599.357825072405,
+            599.7933892670369,
+            600.4529072742156,
+            580.071142703173,
+            571.041553199853,
+            553.9753955580346,
+            551.952147817864,
+            549.378119975896,
+            547.9849306280188,
+            544.9061631306106,
+            541.6401765570815,
+            538.6481128534051,
+            248.42112207763773,
+            56.84447114747088,
+            46.566220939536514,
+            43.07970954731006,
+            42.68004399162037,
+            46.044217498807676,
+            51.4923777952752,
+            57.53614964997735,
+            61.35442705583852,
+            59.55906156128841,
+            60.23785297762984,
+            61.36842121131461,
+            80.39089422522265,
+            81.70885515375784,
+            92.31140635497205,
+            89.96423051997343,
+            88.85135946035798,
+            79.30151652980085,
+            79.32740870935103,
+            82.57181536034764,
+            77.68481646284758,
+            78.74181137328071,
+            84.44015430647482,
+            75.71202077965455,
+            82.99945071792871,
+            93.83130011178403,
+            293.8407187697135,
+            187.16294744263965,
+            183.35544585553924,
+            192.62865242900216,
+            201.605880912991,
+            208.18909202587105,
+            213.63881049092677,
+            220.49109334662128,
+            225.0128458327417,
+            228.34181164319756,
+            231.05729454427424,
+            232.13113063971971,
+            242.1830056638933,
+            256.0765574619743,
+            264.0514924520037,
+            269.54939349959443,
+            277.94348589119164,
+            279.30512673370146,
+            280.9805764723904,
+            280.7544367636357,
+            284.55246256988215,
+            287.65549527425765,
+            292.08277335225125,
+            293.5738303597686,
+            297.15187946459776,
+            293.1977826053328
         ],
-        "noise_std": 10.0
+        "_noise_std": 10.0
     },
     "_comment2": "solver_module_path will be set automatically from process.py",
     "solver_module_path": "/home/domesova/GIT/Endorse-2Dtest-Bayes/flow_wrapper.py",
@@ -111,22 +170,22 @@
         {
             "type": "MH",
             "max_samples": 10000,
-            "time_limit": 7200,
-            "proposal_std": 0.5,
+            "time_limit": 180,
+            "proposal_std": 0.2,
             "surrogate_is_updated": true
         },
         {
             "type": "DAMH",
             "max_samples": 10000,
-            "time_limit": 7200,
-            "proposal_std": 0.7,
+            "time_limit": 180,
+            "proposal_std": 0.4,
             "surrogate_is_updated": true
         },
         {
             "type": "DAMH",
             "max_samples": 10000,
-            "time_limit": 7200,
-            "proposal_std": 1.0,
+            "time_limit": 720,
+            "proposal_std": 0.6,
             "surrogate_is_updated": false
         }
     ],
@@ -143,20 +202,30 @@
     "noise_grid": [
         0.0,
         10.0,
-        17.0,
-        27.0,
-        37.0,
-        47.0,
-        57.0,
-        67.0,
-        77.0,
-        87.0,
-        97.0,
-        107.0,
-        117.0,
-        127.0,
-        137.0,
-        140.0
+        18.0,
+        28.0,
+        38.0,
+        48.0,
+        58.0,
+        68.0,
+        78.0,
+        88.0,
+        98.0,
+        100.0,
+        120.0,
+        140.0,
+        160.0,
+        180.0,
+        200.0,
+        220.0,
+        240.0,
+        260.0,
+        280.0,
+        300.0,
+        320.0,
+        340.0,
+        360.0,
+        365.0
     ],
     "noise_parameters": [
         [
